# hakyll-contrib

./: .gitignore  README.markdown  hakyll-contrib.cabal
data/small-blog/: contact.markdown  index.markdown  posts.html  small-blog.hs
data/small-blog/css/: screen.css
data/small-blog/templates/: default.html
src/Hakyll/Contrib/: Main.hs  SmallBlog.hs
