Name:                hakyll-contrib
Version:             0.0.0.1
Synopsis:            Extra modules for the hakyll website compiler
Homepage:            http://jaspervdj.be/hakyll
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Category:            Web

Cabal-version:       >=1.6
Build-type:          Simple
Data-dir:            data

Data-files:
  small-blog/hakyll.hs
  small-blog/index.html
  small-blog/css/default.css

Source-Repository head
  Type:     git
  Location: git://github.com/jaspervdj/hakyll-contrib.git

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src
  
  Build-depends:
    base   >= 4   && < 5,
    hakyll >= 3.2 && < 3.3,
    pandoc >= 1.6 && < 2

  Exposed-modules:
    Hakyll.Contrib.SmallBlog

Executable hakyll-contrib
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Main-is:        Hakyll/Contrib/Main.hs
  
  Build-depends:
    base      >= 4   && < 5,
    hakyll    >= 3.2 && < 3.3,
    directory >= 1.1 && < 1.3,
    filepath  >= 1.1 && < 1.3
